--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'net.syntaxsama.fluxcore'
-    mainClass = 'net.syntaxsama.fluxcore.HelloApplication'
+    mainModule = 'net.syntaxsama.testgame'
+    mainClass = 'net.syntaxsama.testgame.TestProject'
 }
 
 javafx {
